# Airlines-Alt-Data-Nowcast

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements.txt
data/: kpi_ground_truth.csv
src/: analysis.py  nowcast.py  relative_value.py  walkforward.py
src/data/: kpi_edgar.py  tsa.py
tests/: test_kpi_edgar.py  test_nowcast.py
